--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <h1>Our Pricing</h1>
     <div class="card-option">
       
-      <label class="switch d-flex" name="pricing">
+      <label class="switch d-flex">
         <span class="card-pricing">Annually</span> 
         <input type="checkbox" id="pricing">
         <span class="card-pricing">Monthly</span>
